# impact-observatory

./: .env.example  .gitignore  API.md  BACKEND_DEPLOYMENT.md  CLAUDE.md  DAL_Architecture_Report.docx  DECISION_CALIBRATION_LAYER.md  DECISION_INTELLIGENCE_SYSTEM.md  DECISION_OPERATING_SYSTEM.md  DECISION_QUALITY_LAYER.md  DECISION_TRUST_LAYER.md  DECISION_UX_ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_REPORT.md  Deployment_Architecture_Report.docx  Dockerfile.backend  Enterprise_UX_Audit_Report.docx  GAP_ANALYSIS.html  IMPACT_INTELLIGENCE_LAYER.md  IMPACT_MAP_ARCHITECTURE.md  INSTITUTIONAL_INTERFACE_LAYER.md  Impact_Observatory_GTM_Strategy.docx  Impact_Observatory_Product_Narrative.docx  Impact_Observatory_Product_Prioritization.docx  MACRO_REPOSITION_EXECUTION_PLAN.md  MACRO_REPOSITION_FINAL_PLAN.md  MACRO_UI_REPOSITIONING_REPORT.md  METRICS_PROVENANCE_LAYER.md  Makefile  PACK3_ARCHITECTURE.md  QA-REPORT-EXECUTIVE-DEMO.md  README.md  REGIME_LAYER_ARCHITECTURE.md  RELEASE.md  RELEASE_NOTES.md  RELEASE_REPORT.md  REPLATFORMING_GAP_ANALYSIS.html  SIGNAL_QUALITY_UPGRADE_PACK.md  TRUST_RECOVERY_AUDIT.docx  UX_Label_Audit_Rewrite_Table.xlsx  (+13 more)
backend/: .env.example  API_REFERENCE.md  ARCHITECTURE.md  CODE_GRAPH.md  Dockerfile  EXECUTION_DAG.md  METHODOLOGY.md  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: run_scenario.py
backend/seeds/: __init__.py  actors.py  airports.py  corridors.py  events.py  flights.py  loader.py  ports.py  scenario_seeds.py  vessels.py
backend/src/: config.py  decision_layer.py  (+10 more)
(+1211 files in other folders)
