[project]
name = "gcc-decision-intelligence-backend"
version = "0.1.0"
description = "GCC Decision Intelligence Platform — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "alembic>=1.14.0",
    "neo4j>=5.25.0",
    "redis>=5.2.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "networkx>=3.4.0",
    "mesa>=3.0.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
